// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationConfirmation renders with a custom email 1`] = `
<div class="ncf">
  <div class="ncf__center ncf__margin">
    <div class="ncf__icon ncf__icon--tick ncf__icon--large">
    </div>
    <h1 class="ncf__header ncf__header--confirmation">
      Success
    </h1>
    <p class="ncf__paragraph ncf__confirmation--message">
      We’ve sent confirmation to test@example.com.
    </p>
  </div>
  <div class="ncf__divider-horizontal">
  </div>
  <div class="ncf__confirmation--links ncf__margin">
    <div class="ncf__confirmation--socials">
      <b>
        Breaking news alerts, direct to your lock screen
      </b>
      <p class="ncf__confirmation--mobile">
        Download our apps or follow us on our socials
      </p>
      <p class="ncf__confirmation--desktop">
        Find us in the app and google play stores or follow us on our socials
      </p>
    </div>
    <div class="ncf__confirmation--alerts">
      <b>
        Set up email alerts in
        <span aria-label="myFT"
              class="icon-myft"
        >
        </span>
      </b>
      <p>
        Choose the content you want to follow by personalising your alerts for the most important topics and additional newsletters
      </p>
      <a href="/myft"
         class="margin-top-x4 ncf__button ncf__button--secondary"
         data-trackable="personalise-alerts"
      >
        Personalise my alerts
      </a>
    </div>
  </div>
  <a href="/"
     target="_parent"
     class="ncf__confirmation--finish ncf__button ncf__button--submit"
     data-trackable="confirmation-finish"
  >
    Finish
  </a>
</div>
`;

exports[`RegistrationConfirmation renders with default props 1`] = `
<div class="ncf">
  <div class="ncf__center ncf__margin">
    <div class="ncf__icon ncf__icon--tick ncf__icon--large">
    </div>
    <h1 class="ncf__header ncf__header--confirmation">
      Success
    </h1>
    <p class="ncf__paragraph ncf__confirmation--message">
      We’ve sent confirmation to your email.
    </p>
  </div>
  <div class="ncf__divider-horizontal">
  </div>
  <div class="ncf__confirmation--links ncf__margin">
    <div class="ncf__confirmation--socials">
      <b>
        Breaking news alerts, direct to your lock screen
      </b>
      <p class="ncf__confirmation--mobile">
        Download our apps or follow us on our socials
      </p>
      <p class="ncf__confirmation--desktop">
        Find us in the app and google play stores or follow us on our socials
      </p>
    </div>
    <div class="ncf__confirmation--alerts">
      <b>
        Set up email alerts in
        <span aria-label="myFT"
              class="icon-myft"
        >
        </span>
      </b>
      <p>
        Choose the content you want to follow by personalising your alerts for the most important topics and additional newsletters
      </p>
      <a href="/myft"
         class="margin-top-x4 ncf__button ncf__button--secondary"
         data-trackable="personalise-alerts"
      >
        Personalise my alerts
      </a>
    </div>
  </div>
  <a href="/"
     target="_parent"
     class="ncf__confirmation--finish ncf__button ncf__button--submit"
     data-trackable="confirmation-finish"
  >
    Finish
  </a>
</div>
`;
